# PanaMart

./: compose.yaml
auth/: .env  pyproject.toml
auth/app/: db.py  generate-key.py  main.py  models.py  private.pem  public.pem  settings.py
auth/app/kafka/: producer.py
auth/app/routes/: auth.py  login.py  service.py  user.py
front-web/: package-lock.json  package.json
front-web/app/: .env  Checkout..tsx  getStripPromise.tsx  page.tsx
front-web/app/cancel/: page.tsx
front-web/app/components/: stripe-checkout.tsx
front-web/app/success/: page.tsx
inventory/: .env  Dockerfile
inventory/app/: db.py  main.py
inventory/app/kafka/: consumer.py  order_consumer.py
inventory/app/routes/: inventory.py
order/: .env  pyproject.toml
order/app/: db.py  main.py  models.py
order/app/kafka/: consumer.py  order_verification_consumer.py
order/app/routes/: order.py
payment/: .env  Dockerfile  pyproject.toml
payment/app/: main.py  models.py
payment/app/kafka/: producer.py
payment/app/routes/: payment.py
product/app/: db.py  main.py  models.py
product/app/kafka/consumers/: inventory_consumer.py
product/app/routes/: product.py
to-be-named/: .env
to-be-named/app/: main.py  models.py  settings.py
to-be-named/app/kafka/: consumer.py
to-be-named/app/routes/: inventory.py
